MDEV-23348 vio_shutdown does not prevent later ReadFile on named pipe

Introduce st_vio::shutdown_flag to be checked prior to Read/WriteFile
and during wait for async.io to finish.